--- a/lab-04-ai-ml-services/notebooks/01-rekognition.ipynb
+++ b/lab-04-ai-ml-services/notebooks/01-rekognition.ipynb
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🔍 Función de Análisis con Rekognition\n",
+    "## Función de Análisis con Rekognition\n",
     "\n",
     "Creamos una función que analiza imágenes y detecta objetos automáticamente."
    ]
@@ -518,10 +518,10 @@
    "metadata": {},
    "source": [
     "## Casos de Uso Reales:\n",
-    "- 🏔️ **Análisis geológico**: Identificar formaciones rocosas y minerales\n",
-    "- 🛰️ **Imágenes satelitales**: Detectar cambios en el terreno\n",
-    "- 🌋 **Monitoreo volcánico**: Identificar actividad y cambios\n",
-    "- 🔬 **Investigación**: Automatizar análisis de grandes datasets de imágenes"
+    "- **Análisis geológico**: Identificar formaciones rocosas y minerales\n",
+    "- **Imágenes satelitales**: Detectar cambios en el terreno\n",
+    "- **Monitoreo volcánico**: Identificar actividad y cambios\n",
+    "- **Investigación**: Automatizar análisis de grandes datasets de imágenes"
    ]
   },
   {
