--- a/lab-04-ai-ml-services/notebooks/02-comprehend.ipynb
+++ b/lab-04-ai-ml-services/notebooks/02-comprehend.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🔍 Función de Análisis"
+    "## Función de Análisis"
    ]
   },
   {
@@ -310,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🚨 Ejercicio 2: Análisis de Alerta"
+    "## Ejercicio 2: Análisis de Alerta"
    ]
   },
   {
@@ -370,14 +370,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🎓 Casos de Uso Reales\n",
+    "## Casos de Uso Reales\n",
     "\n",
     "### Amazon Comprehend en Ciencias:\n",
-    "- 📊 **Análisis de literatura**: Procesar miles de papers automáticamente\n",
-    "- 🚨 **Sistemas de alerta**: Analizar tono y urgencia de comunicaciones\n",
-    "- 🔍 **Extracción de datos**: Identificar entidades científicas en textos\n",
-    "- 📈 **Análisis de tendencias**: Detectar patrones en grandes volúmenes de texto\n",
-    "- 📝 **Clasificación**: Organizar documentos por tema y sentimiento"
+    "- **Análisis de literatura**: Procesar miles de papers automáticamente\n",
+    "- **Sistemas de alerta**: Analizar tono y urgencia de comunicaciones\n",
+    "- **Extracción de datos**: Identificar entidades científicas en textos\n",
+    "- **Análisis de tendencias**: Detectar patrones en grandes volúmenes de texto\n",
+    "- **Clasificación**: Organizar documentos por tema y sentimiento"
    ]
   },
   {
